-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2
-
None
-
-
bc253c9130b4dd06481e03bc0acf63cc0cf7017f (qt/qtquick3d/dev) da4e38c298e0f37d3510d9f5803335b067c99123 (qt/qtquick3d/6.2)
-
Qt Quick 3D: Week 37-38
If a custom vertex shader was not provided in Custom Material, fragment shader will not have access to some special variables like VIEW_MATRIX and CAMERA_PROPERTIES. Trying to access these variables from the custom fragment shader will cause compilation error.