Make standard uniforms available in any custom shader snippet

Pick-to: 6.2
Fixes: QTBUG-96730
Change-Id: Ia876808d600242c823340b0a4e6416876e666643
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>